     for Microsoft IRM PDF containers with encrypted payloads. Separately,
     the PDFParser now throws an EncryptedDocumentException instead of an IOException
     if the security handler cannot be found (TIKA-4082).

   * Fix bug that led to duplicate extraction of macros from some OLE2 containers (TIKA-4116).

   * Changed default decompressConcatenated to true in CompressorParser.
     Users may revert to legacy behavior via tika-config.xml (TIKA-4048).

   * Allow users to modify the attachment limit size in the /unpack resource (TIKA-4039)
   
   * Fixed write limit bug in RecursiveParserWrapper (TIKA-4055).

   * Add mime detection for many files with thanks to Gregory Lepore (TIKA-3992).
   
   * Fixed iWork 13 keynote detection on files with wrong extension (TIKA-4111).

Release 2.8.0 - 5/11/2023

   * Enable counting and/or parsing of incremental updates in PDFs.  This
     is an experimental feature and may change in later releases (TIKA-4017).

   * Fixed bug that prevented the the loading of CompositeExternalParser in tika-app and
     tika-server-standard. This parser will call exiftool and ffmpeg if those are installed, as was
     the behavior in Tika 1.x. Exclude org.apache.tika.parser.external.CompositeExternalParser
     if you do not want this behavior (TIKA-4022).

   * Removed the shading of tika-parsers-standard-module (TIKA-4038).

   * Enable optional extraction of file system metadata in FileSystemFetcher (TIKA-4035).

   * Allow pretty printing in FileSystemEmitter (TIKA-4034).

   * Add detection for and a new mime type for older postscript-based
     Adobe Illustrator "application/illustrator+ps" files (TIKA-3971).

   * Add magic detection for canon raw file types: crw, cr2 and cr3 (TIKA-3991).

   * Add detection for ONIX message files (TIKA-4011).

   * Add detection and a parser for ActiveMime files (TIKA-3987).

   * Add extraction of rendition layout value and version from Epub (TIKA-4013).
